# stepik_126739

./: .gitignore  2.1.ipynb  2.2.ipynb  2.3.ipynb  2.4.ipynb  2.5.ipynb  3.1.ipynb  3.2.ipynb  3.3.ipynb  3.4.ipynb  3.5.ipynb  3.6.ipynb  4.1.ipynb  4.2.ipynb  4.3.ipynb  4.4.ipynb  5.1.ipynb  5.2.ipynb  5.3.ipynb  5.4.ipynb  6.1.ipynb  6.2.ipynb  6.3.ipynb  6.4.ipynb  6.5.ipynb  6.6.ipynb  6.7.ipynb  7.1.ipynb  7.2.ipynb  7.3.ipynb  7.4.ipynb  LICENSE  README.md  pyproject.toml
