[tool.poetry]
name = "stepik-126739"
version = "0.1.0"
description = ""
authors = ["Grigory Bubnov <sky1su@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
